[gd_scene load_steps=13 format=3 uid="uid://bxmbtddt0ipts"]

[ext_resource type="Script" path="res://scripts/ui/battle/popup_with_character_info/popup_with_skill_info/popup_with_skill_info.gd" id="1_fup2d"]
[ext_resource type="Script" path="res://scripts/extension/containers/moving_container.gd" id="1_sovwk"]
[ext_resource type="FontFile" uid="uid://d14b6gyntdr4e" path="res://fonts/ubuntu/ubuntu-bold.ttf" id="2_lj8gt"]
[ext_resource type="Texture2D" uid="uid://crgq4koj1emym" path="res://sprites/battle/skills/test_skill.svg" id="3_v744m"]
[ext_resource type="Texture2D" uid="uid://080nbt6cg054" path="res://sprites/ui/battle/popup_with_character_info/popup_with_skill_info/skills_types_icons/melee_type_icon.svg" id="4_74cg0"]
[ext_resource type="Texture2D" uid="uid://b5rnotvxes64o" path="res://sprites/ui/battle/popup_with_character_info/popup_with_skill_info/button_showing_dice_ability/default.svg" id="4_xgt27"]
[ext_resource type="Texture2D" uid="uid://dh1a7om5wfhov" path="res://sprites/ui/battle/popup_with_character_info/popup_with_skill_info/skills_types_icons/range_type_icon.svg" id="5_l8m42"]
[ext_resource type="Texture2D" uid="uid://ybkvgd3dgiv0" path="res://sprites/ui/battle/popup_with_character_info/popup_with_skill_info/button_showing_dice_ability/pressed.svg" id="5_oksd2"]
[ext_resource type="LabelSettings" uid="uid://bg1053ea44uyi" path="res://resources/ui/global/label_settings/default/large_bold.tres" id="5_vj04u"]
[ext_resource type="Texture2D" uid="uid://frwtuvmfj2ct" path="res://sprites/ui/battle/popup_with_character_info/popup_with_skill_info/button_showing_dice_ability/hover.svg" id="6_5kikf"]
[ext_resource type="LabelSettings" uid="uid://bcny06divfrey" path="res://resources/ui/global/label_settings/default/medium_bolt.tres" id="6_qwta2"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_7lnsl"]
frames = 2
pause = true
one_shot = true
frame_0/texture = ExtResource("4_74cg0")
frame_1/texture = ExtResource("5_l8m42")
frame_1/duration = 1.0

[node name="PopupWithSkillInfo" type="MarginContainer"]
offset_right = 587.0
offset_bottom = 463.0
mouse_filter = 2
theme_override_constants/margin_top = 0
script = ExtResource("1_fup2d")
metadata/_edit_group_ = true

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="ActionsDiceList" type="MarginContainer" parent="HBox"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_top = 0
script = ExtResource("1_sovwk")

[node name="Panel" type="PanelContainer" parent="HBox/ActionsDiceList"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Margin" type="MarginContainer" parent="HBox/ActionsDiceList/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 20

[node name="ActionsDice" type="VBoxContainer" parent="HBox/ActionsDiceList/Panel/Margin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="MainPanel" type="MarginContainer" parent="HBox/VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 0
script = ExtResource("1_sovwk")

[node name="Panel" type="PanelContainer" parent="HBox/VBox/MainPanel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="HBox/VBox/MainPanel/Panel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="HBox/VBox/MainPanel/Panel/Margin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="HBox/VBox/MainPanel/Panel/Margin/VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="SkillIcon" type="TextureRect" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_v744m")
expand_mode = 1

[node name="SkillTitle" type="Label" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_lj8gt")
theme_override_font_sizes/font_size = 24
text = "Skill Title"
label_settings = ExtResource("5_vj04u")
vertical_alignment = 1
autowrap_mode = 2

[node name="SkillTypes" type="VBoxContainer" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RangeType" type="HBoxContainer" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header/SkillTypes"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="Type" type="Label" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header/SkillTypes/RangeType"]
layout_mode = 2
size_flags_horizontal = 8
text = "Type"
label_settings = ExtResource("6_qwta2")
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header/SkillTypes/RangeType"]
self_modulate = Color(0.2, 0.666667, 1, 1)
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("AnimatedTexture_7lnsl")
expand_mode = 1

[node name="UsesType" type="HBoxContainer" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header/SkillTypes"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="Type" type="Label" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header/SkillTypes/UsesType"]
layout_mode = 2
size_flags_horizontal = 8
text = "Colldown"
label_settings = ExtResource("6_qwta2")
vertical_alignment = 1

[node name="Counter" type="Label" parent="HBox/VBox/MainPanel/Panel/Margin/VBox/Header/SkillTypes/UsesType"]
self_modulate = Color(0.2, 0.666667, 1, 1)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.47451, 0.631373, 0.94902, 1)
theme_override_fonts/font = ExtResource("2_lj8gt")
theme_override_font_sizes/font_size = 24
text = "9"
label_settings = ExtResource("5_vj04u")
vertical_alignment = 1

[node name="SkillAbilityDescription" type="RichTextLabel" parent="HBox/VBox/MainPanel/Panel/Margin/VBox"]
visible = false
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="ButtonHidingDiceAbilities" type="TextureButton" parent="HBox/VBox/MainPanel/Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
toggle_mode = true
texture_normal = ExtResource("4_xgt27")
texture_pressed = ExtResource("5_oksd2")
texture_hover = ExtResource("6_5kikf")

[node name="AbilitiesVBox" type="VBoxContainer" parent="HBox/VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 10

[connection signal="toggled" from="HBox/VBox/MainPanel/Panel/Margin/VBox/ButtonHidingDiceAbilities" to="." method="_on_button_hiding_dice_abilities_toggled"]
